Add feature to prevent multiple executions of one wr
